Zanimo Web Version 0.1

--- a/src/app/Authentification/login/login.component.html
+++ b/src/app/Authentification/login/login.component.html
@@ -36,7 +36,8 @@
                 </div><br>
             </div>
             <div fxLayoutAlign="stretch" fxLayout="column">
-                <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="AdminLogIn()">
+                <button name="Connect" [disabled]="!form.valid" mat-raised-button color="primary"
+                    (click)="AdminLogIn()">
                     Connect </button>
             </div>
 
