--- a/src/app/Dialogs/deconnection/deconnection.component.html
+++ b/src/app/Dialogs/deconnection/deconnection.component.html
@@ -5,8 +5,8 @@
     </mat-dialog-content>
     <mat-dialog-actions fxLayoutAlign="center center" fxLayoutGap="10px">
         <button mat-button color="primary" mat-dialog-close mat-dialog-close="true"> Stay Here </button>
-        <button mat-button color="warn" mat-dialog-close mat-dialog-close="false" (click)="AuthService.AdminLogOut()"
-            routerLinkActive="router-link-active"> Exit </button>
+        <button name="Okby" mat-button color="warn" mat-dialog-close mat-dialog-close="false"
+            (click)="AuthService.AdminLogOut()" routerLinkActive="router-link-active"> Exit </button>
     </mat-dialog-actions>
 
 </div>
