--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -33,8 +33,8 @@
                                     wysiwyg
                                 </mat-icon>
                             </button>
-                            <button mat-icon-button color="warn" #tooltip="matTooltip" matTooltip="Delete this Post"
-                                (click)="DeletePost(user,post._id)">
+                            <button name="Delete" mat-icon-button color="warn" #tooltip="matTooltip"
+                                matTooltip="Delete this Post" (click)="DeletePost(user,post._id)">
                                 <mat-icon>
                                     delete_
                                 </mat-icon>
